welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: Unmatched closing brace '}' ignored here
  }
  ^