welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var x:Int=0
  baisseBrosse()
  while(!estFaceMur){
    avance()
  }
    
  }
  }
  
